bodhilibrs_frompyo3/tests/ui/error-unsupported-field-unit.stderr
error: Unnamed fields are not supported
 --> tests/ui/error-unsupported-field-unit.rs:4:27
  |
4 | struct TestUnsupportedUnit(i32);
  |                           ^^^^^
